# vkHPC

./: .gitignore  CMakeLists.txt  build.sh  main.cpp  spvc.sh
include/: ComputeManager.hpp  utils.hpp
shaders/: headless.comp  headless.comp.spv
shaders/spirv/: headless.comp.spv
